--- a/indx.html
+++ b/indx.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>This is my first website.</h1>
-    <h1>look man. i can push it to github now</h1>
+    <p>im happy now .</p>
+    <p>you know what im a ghost</p>
 </body>
 </html>
